# smart-drive

./: .gitignore  Dockerfile  README.md  cloudbuild.yaml  package-lock.json  package.json  tsconfig.json
.github/workflows/: testbuild-backend.yml  testbuild-data-extractor.yml  testbuild-image-extractor.yml  testbuild-media-extractor.yml  testbuild-python.yml  testbuild.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  cloudbuild.yaml  eslint.config.js  package-lock.json  package.json  tsconfig.json
backend/.github/workflows/: testbuild.yml
backend/public/: query.html
backend/src/: app.ts  logger.ts  test.ts
backend/src/config/: validateEnv.ts
backend/src/db/: mongo.ts  weaviate_client.ts
backend/src/handlers/: ephemeralChatHandler.ts  fileHandler.ts  queryHandler.ts  uploadHandler.ts  userHandler.ts
backend/src/middleware/: auth.ts  csrf.ts  rateLimit.ts  requestContext.ts
backend/src/models/: chatUsageModel.ts  revokedTokenModel.ts  searchClickModel.ts  summaryModel.ts  userFileModel.ts  userModel.ts  userResetPasswordModel.ts
backend/src/routes/: auth.ts  ephemeralChat.ts  file.ts  query.ts  upload.ts
backend/src/services/: chatPipeline.ts  chatPreparation.ts  chatSmallTalk.ts  chatUsage.ts  chunking.ts  emailService.ts  ephemeralChatPipeline.ts  ephemeralChatStore.ts  gcsUpload.ts  gemini.ts  queryEntityExtractor.ts  queryWeaviate.ts  quickExtract.ts  redact.ts  retry.ts  searchPipeline.ts
backend/src/tests/: app.test.ts
backend/src/types/: pdf-parse.d.ts
backend/src/utils/: gcsUpload.ts  getQueryEmbedding.ts  pubsub.ts
public/: upload.html
smartdrive-extractor/: .dockerignore  .env.example  Dockerfile  cloudbuild.yaml  main.py  pyproject 2.toml  pyproject.toml  requirements.txt
smartdrive-extractor/app/: app.py  environment.py  pubsub.py  weaviate_client.py
smartdrive-extractor/database/: db.py
smartdrive-extractor/helper_functions/: file_extractor.py  image_utils.py  llm.py  llm_summarizer.py  pdf.py  pdf_summarizer.py  upload_weaviate.py  vector_embeddings.py  weaviate_test.py  weaviate_utils.py
smartdrive-extractor/uploads/: Final-practice.xlsx
smartdrive-extractor/utils/: docling.py  document_extractor.py  file_extractor.py  gcs_file_download.py  image_pipeline.py  image_utils.py  ingestion_router.py  llm.py  schema.py  text_extractor.py  unstructured.py  weaviate_utils.py
smartdrive-frontend/: next.config.ts  package-lock.json  package.json
smartdrive-frontend/src/app/: globals.css  layout.tsx  page.tsx
smartdrive-frontend/src/components/: AuthShell.tsx  ChatMarkdown.tsx  FileCard.tsx  FileChat.tsx  FileListWithDrawer.tsx  ForgotPasswordForm.tsx  LogIn.tsx  ModeToggle.tsx  OnboardingTip.tsx  QuickChatWidget.tsx  RecentUploads.tsx  ResetPassword.tsx  Search.tsx  SettingsPage.tsx  (+8 more)
smartdrive-image-extractor/: .dockerignore  .env.example  Dockerfile  cloudbuild.yaml  main.py  pyproject.toml
smartdrive-image-extractor/app/: app.py  image_extractor.py  pubsub.py  weaviate_client.py
smartdrive-image-extractor/utils/: gcs_file_download.py  image_utils.py  llm.py  weaviate_utils.py
smartdrive-media-extractor/: .dockerignore  .env.example  Dockerfile  cloudbuild.yaml  main.py  pyproject.toml
smartdrive-media-extractor/app/: app.py  media_extractor.py  pubsub.py
smartdrive-media-extractor/utils/: gcs_file_download.py  llm.py  media_utils.py  weaviate_utils.py
smartdrive_core/: CONTRACTS.md  main.py  pyproject.toml
smartdrive_core/src/smartdrive_core/: chunking.py  errors.py  gcs.py  llm.py  messages.py  metrics.py  mongo_status.py  pubsub_pull.py  retry.py  schema.py  tokenizer.py  weaviate_client.py
smartdrive_core/src/smartdrive_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: app.ts
src/handlers/: uploadHandler.ts
src/routes/: upload.ts
src/utils/: gcsUpload.ts
(+32 files in other folders)
