[project]
name = "smartdrive-extractor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.1.1",
  "gunicorn>=22.0.0",
  "python-dotenv>=1.0.1",
  "google-cloud-storage>=3.1.1",
  "google-cloud-pubsub>=2.30.0",
  "weaviate-client>=4.15.3",
  "docling[easyocr]",
  "google-genai",
  "smartdrive-core",
]

[tool.uv.sources]
smartdrive-core = { path = "../smartdrive_core", editable = true  }
