[project]
name = "smartdrive-media-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "faster-whisper>=1.1.1",
    "ffmpeg>=1.4",
    "ffmpeg-python>=0.2.0",
    "flask>=3.0",
    "google-genai",
    "gunicorn>=21.2",
    "google-cloud-pubsub>=2.30.0",
    "google-cloud-storage>=3.1.1",
    "smartdrive-core",
    "transformers>=4.52.4",
    "weaviate-client>=4.15.3",
]

[tool.uv.sources]
smartdrive-core = { path = "../smartdrive_core" }

[tool.uv]
override-dependencies = ["av==16.1.0"]
