[project]
name = "smartdrive-core"
version = "0.1.0"
dependencies = [
  "google-cloud-pubsub",
  "google-cloud-storage",
  "python-dotenv",
  "weaviate-client>=4.15.3",
  "google-genai",
  "pillow",
  "json-repair",
  "pymongo>=4.6"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]